--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
+    "@repo/db": "*",
     "@repo/ui": "*",
+    "@repo/store":"*",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@repo/db":"*" 
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
