--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@repo/db": "*",
+    "@repo/store": "*",
     "@repo/ui": "*",
-    "@repo/store":"*",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "next": "^14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2"
